--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Hi, I'm Jack and this is my blog. Here I plan to keep you up to date on my many hobbies, all well as letting you know my opinion on any topic that catches my eye, because you definetly asked. <br>
+  p I hope you enjoy reading, and feel free to let me kow your thoughts on any topic I cover!
