--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,4 @@
-//This file creates the content of the index page.
+//-This file creates the content of the index page.
 extends layout
 
 //Here the title and intro of the index page are created.
