--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,4 +1,4 @@
-//This file outlines the layout of the webpage. Other pug files extend this one to create the webpages content.
+//-This file outlines the layout of the webpage. Other pug files extend this one to create the webpages content.
 doctype html
 html
   head
